# AI_KM

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  rag.py  start.sh  streaming.py
templates/: chat_embed.html  index.html  upload.html  upload_success.html
