[tool.poetry]
name = "ai-km"
version = "0.1.0"
description = ""
authors = ["ben.chen"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.16"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.23"
langchain-chroma = "^0.1.3"
flask = "^3.0.3"
langchain-huggingface = "^0.0.3"
langchain-community = "^0.2.16"
qdrant-client = "^1.11.1"
langchain-qdrant = "^0.1.3"
pypdf = "^4.3.1"
langgraph = "^0.2.19"
langchain-cli = "^0.0.30"
nbconvert = "^7.16.4"
langchain-experimental = "0.0.65"
fastapi = "^0.115.0"
uvicorn = "0.23.2"
python-multipart = "^0.0.10"
jinja2 = "^3.1.4"
streamlit = "^1.38.0"
pillow = "^10.4.0"
beautifulsoup4 = "^4.12.3"
opencv-python-headless = "^4.10.0.84"
ghostscript = "^0.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
